--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">    
-	<title>Document</title>
+	<link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css"> 
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<title>Clone page</title>
 </head>
 <body>
-	<h1>Hello</h1>
+	<nav class="top-navigation">
+	    <div class="content">
+	        <ul class="links">
+	            <li class="active">Meet Karma</li>
+	            <li>How it Works</li>
+	            <li>Store</li>
+	            <li>Blog</li>
+	            <li>Help</li>
+	            <li>Login</li>
+	        </ul>
+	        <img class="logo" src="karma-logo.svg" alt="Logo Image" width="26px">
+	    </div>
+	</nav>
 
 </body>
 </html>
