--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
 	        <img class="logo" src="karma-logo.svg" alt="Logo Image" width="26px">
 	    </div>
 	</nav>
+	<section class="introduction">
+		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you everywhere you go.</h3>
+				<div class="buttons">
+					<div class="half learn">
+						<button>Learn More</button>
+					</div>
+					<div class="half watch">
+						<span>
+							<img src="play-icon.svg" width="35px" height="35px" alt="">
+						</span>
+					</div>
+				</div>
+		</div>
+		
+	</section>
 
 </body>
 </html>
