--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
 					<div class="half watch">
 						<span>
 							<img src="play-icon.svg" width="35px" height="35px" alt="">
+							Watch the Video 
 						</span>
 					</div>
 				</div>
+
+				<div class="bouncing-arrow">
+                <a href="#">
+                    <img src="arrow-down.png" alt="Bouncing Arrow">
+                </a>
+            </div>
+       
 		</div>
+
+
 		
 	</section>
 
