--- a/index.html
+++ b/index.html
@@ -38,16 +38,40 @@
 				</div>
 
 				<div class="bouncing-arrow">
-                <a href="#">
-                    <img src="arrow-down.png" alt="Bouncing Arrow">
-                </a>
-            </div>
+               		 <a href="#"><img src="arrow-down.png" alt="Bouncing Arrow"></a>
+            	</div>
        
-		</div>
-
-
+			</div>
 		
 	</section>
+		  <section class="cases">
+       		<div class="content">
+            <h2>Everyone needs a little Karma.</h2>
+            <ul class="devices">
+                <li>
+                    <img width="127px" height="127px" src="icon-devices.svg" alt="Internet for all devices image">
+                    <div class="caption">
+                        <h3>Internet for all devices</h3>
+                        <p>Connect all your favorite devices to Karma.</p>
+                    </div>
+                </li>
+                <li>
+                    <img width="127px" height="127px" src="icon-coffee.svg" alt="Boost your productivity image">
+                    <div class="caption">
+                        <h3>Boost your productivity</h3>
+                        <p>Freedom of the internet, wherever you are.</p>
+                    </div>
+                </li>
+                <li>
+                    <img width="127px" height="127px" src="icon-refill.svg" alt="Pay as You Go image">
+                    <div class="caption">
+                        <h3>Pay as You Go</h3>
+                        <p>Take full control of your spend. Pay for what you need.</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 </html>
