final karma clone page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css"> 
+    <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--link href="font-awesome.min.css" rel="stylesheet"-->
 	<title>Clone page</title>
 </head>
 <body>
@@ -72,6 +75,42 @@
             </ul>
         </div>
     </section>
+
+    <section>
+    	<div class="buynow">
+    		<div class="leftcontent">
+    			<h3>What is Karma?</h3>
+    				<P>The search for reliable WiFi can be frustrating. During your commute, at your local coffee shop, at the airport or hotel.</P>
+    				<P>Meet Karma: your pocket’s new pal. Karma will keep your devices online, everywhere you go.</P>
+    				<P>Karma grabs a 4G signal and creates your own personal WiFi network. Give it a home in your bag and stay connected for good.</P>
+    			<div class="button">
+    				<div class="buy-button">
+    					<button>Buy Now</button>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+    <footer class="social">
+    	<div class="content">
+    	   <hr/>
+            <h5>Join us on</h5>
+            <ul class="icons">
+                <li class="twitter">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="facebook">
+                    <i class="fa fa-facebook 2g"></i>
+                </li>
+                <li class="instagram">
+                    <i class="fa fa-instagram 2g"></i>
+                </li>
+            </ul>
+            <span class="copy">
+                &copy; Karma Mobility, Inc.
+            </span>
+    	</div>
+    </footer>
 
 </body>
 </html>
