--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css"> 
     <link rel="shortcut icon" href="favicon.ico">
-    <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="font-awesome.min.css" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel='stylesheet' type='text/css'>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--link href="font-awesome.min.css" rel="stylesheet"-->
 	<title>Clone page</title>
 </head>
 <body>
